--- a/library-client/package.json
+++ b/library-client/package.json
@@ -14,13 +14,19 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@snaplet/copycat": "^6.0.0",
     "@snaplet/seed": "^0.98.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.15.32",
@@ -37,6 +43,7 @@
     "npm-run-all2": "^8.0.4",
     "postgres": "^3.4.7",
     "prettier": "3.5.3",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
