--- a/library-client/package.json
+++ b/library-client/package.json
@@ -14,10 +14,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^13.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
+    "reka-ui": "^2.3.2",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5",
     "vue": "^3.5.17",
