--- a/library-client/package.json
+++ b/library-client/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify/vue": "^5.0.0",
     "@snaplet/copycat": "^6.0.0",
     "@snaplet/seed": "^0.98.0",
     "@tailwindcss/vite": "^4.1.11",
